[package]
name = "si-vectors"
version = "0.1.0"
edition = "2021"
authors = ["NumanFR"]
description = "A rust library for physical calculations"
repository = "https://github.com/numanfr/units"
license = "Apache-2.0"
keywords = ["physics", "si","si-units","units"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
